--- a/home.css
+++ b/home.css
@@ -135,7 +135,7 @@ body {
     width: 100%;
     height: 100vh;
     margin-top: 80px;
-    background: url('p-1.png');
+    background: url('../TripTrek/Home/p-1.png');
     background-size: cover;
     position: relative;
     color: white;
@@ -506,7 +506,7 @@ body {
     margin-top: 60px;
     width: 100%;
     height: 430px;
-    background: url('lt1.png');
+    background: url('../TripTrek/Home/lt1.png');
     background-size: cover;
     color: white;
     display: flex;
